# SPropTools

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  coq-sproptools.opam  meta.yml  sprop-tools.opam
.github/workflows/: docker-action.yml  nix-action.yml
resources/: index.md
theories/: Logic.v  SquashProperties.v  logic.v  spropTests.v
